--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   build:
+    permissions:
+      id-token: write # This is required for requesting the JWT
     runs-on: ubuntu-latest
 
     steps:
