--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::654654236858:role/GithubActions
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
-          aws-region: us-west-2
+          aws-region: us-east-2
 
       - name: Login to Amazon ECR
         id: login-ecr
